--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -4,17 +4,29 @@ services:
     build:
       context: keycloak
       dockerfile: Dockerfile
-    restart: always
     ports:
       - 8180:8080
     network_mode: bridge
   postgres:
     image: postgres:9.6.16-alpine
-    restart: always
     environment:
       POSTGRES_DB: goms
       POSTGRES_USER: goms
       POSTGRES_PASSWORD: goms
     ports:
-      - 5432:5432
+      - 5433:5432
+    network_mode: bridge
+  prometheus:
+    build:
+      context: monitoring/prometheus
+      dockerfile: Dockerfile
+    ports:
+      - "9090:9090"
+    network_mode: bridge
+  grafana:
+    build:
+      context: monitoring/grafana
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
     network_mode: bridge
